# troel

./: .clang-format  .gitignore  CMakeLists.txt  example.tr  example1.tr
src/: memory.c  memory.h  tr_debug.c  tr_debug.h  tr_lexer.c  tr_lexer.h  tr_obj.c  tr_obj.h  tr_opcode.h  tr_parser.c  tr_parser.h  tr_stdlib.c  tr_stdlib.h  tr_table.c  tr_table.h  tr_value.c  tr_value.h  tr_vm.c  tr_vm.h  troelc.c
